<resources>
    <string name="app_name">HelioApp</string>

    <!-- Shared -->
    <string name="component_name">Name</string>
    <string name="ip_address">IP address</string>
    <string name="ip_hint">For example: 192.168.0.1</string>
    <string name="component_updated">Updated</string>
    <string name="select_blinds">Select blinds</string>
    <string name="component_deactivated">Disabled</string>
    <string name="component_activated">Enabled</string>
    <string name="delete_component">Delete</string>
    <string name="deleted_message">Deleted</string>

    <!-- Blinds/motors -->
    <string name="title_control">Control</string>
    <string name="title_blinds_settings">Edit Blinds</string>
    <string name="title_edit_blind">Edit Blind</string>
    <string name="new_blinds">New blinds</string>
    <string name="closed_state">Closed</string>
    <string name="open_state">Open</string>
    <string name="open_button">Open</string>
    <string name="close_button">Close</string>
    <string name="settingsCalibration">Motor Calibration</string>
    <string name="settingsViewSensors">View this Blind\'s Sensors</string>
    <string name="settingsViewSchedules">View this Blind\'s Schedules</string>
    <string name="blinds_icon">Icon</string>

    <!-- Schedules -->
    <string name="add_new_schedule_button">New schedule</string>
    <string name="title_edit_schedule">Edit Schedule</string>
    <string name="title_schedule_setting">Schedule</string>
    <string name="time_to_open">Time to open (minutes)</string>
    <string name="target_motor_value_prefix">"Target: "</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>

    <!-- Sensors -->
    <string name="light_sensor">Light Sensor</string>
    <string name="motion_sensor">Motion Sensor</string>
    <string name="new_motion_sensor">New motion sensor</string>
    <string name="new_light_sensor">New light sensor</string>
    <string name="sensor">Sensor</string>
    <string name="motion_sensor_sensitivity">Sensor Sensitivity (Minutes)</string>

    <!-- Settings -->
    <string name="connect_to_your_helio_hub_device">Connect to your Helio Hub</string>
    <string name="connect_button">Connect</string>
    <string name="connection_status">Connection status</string>
    <string name="not_connected">not connected</string>
    <string name="connected">connected</string>
    <string name="user_settings_theme_key">theme_key</string>
    <string name="theme">Colour Theme</string>
    <string name="title_settings">Settings</string>
    <string name="default_theme">Light</string>
    <string name="night_theme">Night</string>
    <string name="high_contrast_theme">High Contrast</string>
    <string name="ip_key">ip_preference_key</string>
    <string name="ip_address_set">IP address set</string>
    <string name="ip_incorrect_format">Incorrect format</string>

    <!-- Voice control -->
    <string name="does_not_support_voice_recognition">Your device does not support voice recognition</string>
    <string name="voice_control_button_description">Voice recognition</string>
    <string name="setting_level_message">Setting %1$s to level %2$s</string>
    <string name="open_message">Opening %s</string>
    <string name="close_message">Closing %s</string>
    <string name="blinds_not_found_message">Blinds not found</string>
    <string name="command_not_recognised_message">Command not recognised</string>

    <!--  Calibration  -->
    <string name="motor_calibration">Calibration</string>
    <string name="press_and_hold_to_move_instructions">Press and hold to move</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="set_high_and_low_points_instructions">Set high and low points</string>
    <string name="set_high_point">Set High Point</string>
    <string name="set_low_point">Set Low Point</string>
    <string name="calibrated">Calibrated</string>
</resources>