<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_control"
        android:icon="@drawable/blinds_icon"
        android:title="@string/title_control" />
    <item
        android:id="@+id/navigation_blinds"
        android:icon="@drawable/ic_edit_pencil"
        android:title="@string/title_blinds_settings" />
    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_timer"
        android:title="@string/title_schedule_setting"/>
    <item
        android:id="@+id/navigation_sensors"
        android:icon="@drawable/ic_sensor"
        android:title="@string/sensor" />
    <item
        android:id="@+id/navigation_hub"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/title_settings" />
</menu>