<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_control">

    <fragment
        android:id="@+id/singleBlindSettingsFragment"
        android:name="com.helio.app.ui.blinds.SingleBlindFragment"
        android:label="@string/title_edit_blind"
        tools:layout="@layout/fragment_single_blind_settings">

        <argument
            android:name="currentMotorId"
            android:defaultValue="0"
            app:argType="integer" />
        <action
            android:id="@+id/action_singleBlindSettingsFragment_to_calibrationFragment"
            app:destination="@id/calibrationFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.helio.app.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/navigation_control"
        android:name="com.helio.app.ui.blinds.ControlFragment"
        android:label="@string/title_control"
        tools:layout="@layout/fragment_control">
        <action
            android:id="@+id/action_navigation_control_to_singleBlindSettingsFragment"
            app:destination="@id/singleBlindSettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.helio.app.ui.schedules.SchedulesFragment"
        android:label="@string/title_schedule_setting"
        tools:layout="@layout/fragment_schedule_settings">
        <action
            android:id="@+id/action_scheduleFragment_to_scheduleSettingsFragment"
            app:destination="@id/scheduleSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/scheduleSettingsFragment"
        android:name="com.helio.app.ui.schedules.SingleScheduleFragment"
        android:label="@string/title_edit_schedule"
        tools:layout="@layout/schedule_list_item">

        <argument
            android:name="currentScheduleId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_sensors"
        android:name="com.helio.app.ui.sensors.SensorsFragment"
        android:label="@string/sensor"
        tools:layout="@layout/fragment_sensors_settings">
        <action
            android:id="@+id/action_sensorsSettingFragment_to_singleSensorSettingFragment"
            app:destination="@+id/singleSensorSettingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/singleSensorSettingsFragment"
        android:name="com.helio.app.ui.sensors.SingleSensorFragment"
        android:label="@string/sensor"
        tools:layout="@layout/fragment_single_sensor_settings">

        <argument
            android:name="currentSensorId"
            android:defaultValue="0"
            app:argType="integer" />

        <argument
            android:name="sensorType"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/calibrationFragment"
        android:name="com.helio.app.ui.blinds.CalibrationFragment"
        android:label="@string/motor_calibration"
        tools:layout="@layout/fragment_calibration">

        <argument
            android:name="currentMotorId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>
</navigation>