<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.blinds.CalibrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="50dp">

        <TextView
            android:id="@+id/hold_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/press_and_hold_to_move_instructions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/move_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="?colorSecondary"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp"
            android:text="@string/move_up"
            android:textSize="24sp" />

        <Button
            android:id="@+id/move_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="?colorSecondary"
            android:paddingVertical="20dp"
            android:text="@string/move_down"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/set_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/set_high_and_low_points_instructions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/set_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="?colorSecondary"
            android:paddingVertical="20dp"
            android:text="@string/set_high_point"
            android:textSize="24sp" />

        <Button
            android:id="@+id/set_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="?colorSecondary"
            android:paddingVertical="20dp"
            android:text="@string/set_low_point"
            android:textSize="24sp" />
    </LinearLayout>
</ScrollView>
