<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--  Hub connection  -->

    <TextView
        android:id="@+id/hub_title_view"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/connect_to_your_helio_hub_device"
        app:drawableRightCompat="@drawable/hub"
        android:drawablePadding="5dp"
        />

    <!--  QR camera feed window  -->
    <View
        android:id="@+id/qr_scanner_container"
        android:layout_width="280dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/qr_scanner_window"/>


    <TextView
        android:id="@+id/connection_status_title_view"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"
        android:layout_above="@id/connectionStatus"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/connection_status"
        />

    <TextView
        android:id="@+id/connectionStatus"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="45dp"
        android:layout_alignParentBottom="true"
        android:textSize="18sp"
        android:text="@string/not_connected"
        app:drawableLeftCompat="@android:drawable/ic_delete"
        android:drawablePadding="2dp"
        android:gravity="start|center_vertical"
        />

</RelativeLayout>
